JDO Convert annotation results in IllegalArgumentException on PM.makePersistent
Branch showing working test case suing JDO metadata

--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
                 <version>${dn.maven.plugin.ver}</version>
                 <configuration>
                     <api>JDO</api>
-                    <persistenceUnitName>MyTest</persistenceUnitName>
+                    <metadataIncludes>**/*.jdo</metadataIncludes>
                     <fork>false</fork>
                     <verbose>false</verbose>
                     <log4jConfiguration>${basedir}/src/main/resources/log4j.properties</log4jConfiguration>
